Validação de Pedidos e Funcionamento total da API